Support Java 11 instead of only 17.
Signed-off-by: Adam Blanchet <adamblanchet@free.fr>